ubiquity (1.7.10) UNRELEASED; urgency=low

  * Check for a valid cursor position in zoommap's hit_test and other minor
    fixes.

 -- Evan Dandrea <evand@ubuntu.com>  Wed, 20 Feb 2008 13:49:54 -0500

ubiquity (1.7.9) hardy; urgency=low

  [ Evan Dandrea ]
  * Drop priviliges for gnome-settings-daemon in ubiquity-dm.
  * Added a new tzmap widget.  Ubiquity now shrinks to 674x434 (LP: #38442).

  [ Colin Watson ]
  * RFC 2181 clarifies that host names may be as short as one octet, so
    allow that (LP: #193054).

  [ Evan Dandrea ]
  * Automatic update of included source packages: base-installer
    1.86ubuntu2, partman-target 52ubuntu6.

 -- Evan Dandrea <evand@ubuntu.com>  Wed, 20 Feb 2008 09:28:17 -0500

ubiquity (1.7.8) hardy; urgency=low

  * Check the md5 hash of the source and target files on copy to ensure they
    match, giving the user the option to abort, retry, or skip the file.
  * The md5 check can be disabled by preseeding
    ubiquity/install/md5_check to false.
  * Catch exceptions around the processing of each components run()
    function.
  * seteuid as a regular user until we need to do something as root.
  * Automatic update of included source packages: partman-target
    52ubuntu5.

 -- Evan Dandrea <evand@ubuntu.com>  Fri, 15 Feb 2008 00:10:18 -0500

ubiquity (1.7.7) hardy; urgency=low

  [ Mario Limonciello ]
  * Add ubiquity-frontend-mythbuntu.links to source exterior glade files.
  * Add temporary workaround to allow Mythbuntu installs on low res
    displays.
  * Fix case when no themes are removed.

  [ Colin Watson ]
  * Prevent apt-install from installing packages directly unless
    install_extras has been run (previously, it would do so once apt was
    configured, which produced some confusing error messages).
  * Call apt-setup finish-install script during cleanup, not while
    configuring apt; removing cdrom entries from sources.list at this point
    broke OEM installs and probably other things (LP: #188240).