@@ -1,7 +1,13 @@
 ubiquity (1.7.10) UNRELEASED; urgency=low
 
+  [ Evan Dandrea ]
   * Check for a valid cursor position in zoommap's hit_test and other minor
     fixes.
+
+  [ Colin Watson ]
+  * Disconnect from ubiquity's debconf emulator when reconfiguring packages
+    and when running ucf; recognise X_LOADTEMPLATEFILE as a valid debconf
+    command (LP: #193986).
 
  -- Evan Dandrea <evand@ubuntu.com>  Wed, 20 Feb 2008 13:49:54 -0500
 
